Fix theme layout issues

--- a/mycollab-web/src/main/resources/VAADIN/themes/mycollab_20181214/components/_form.scss
+++ b/mycollab-web/src/main/resources/VAADIN/themes/mycollab_20181214/components/_form.scss
@@ -7,6 +7,19 @@
   }
 }
 
+/** Form
+* Custom required indicator. Remove the default required indicator and replace the new one
+**/
+.required-field-indicator::after {
+  content: ' (*Required)';
+  color: $my-meta-color;
+  font-size: small;
+}
+
+.v-required-field-indicator {
+  display: none !important;
+}
+
 @mixin mycollab-form {
   .form {
     .section {
